--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "sensio/framework-extra-bundle": "^3.0",
     "myclabs/php-enum": "^1.5",
     "doctrine/orm": "^2.5",
-    "doctrine/doctrine-bundle": "^1.6",
+    "doctrine/doctrine-bundle": "^1.6"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7",
