added paramConverters tests

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "keywords": [
     "filter",
     "sorter",
-    "api"
+    "doctrine",
+    "specification"
   ],
   "license": "MIT",
   "authors": [
