--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
   },
   "require": {
     "php": "^7.0",
-    "symfony/symfony": "^2.8|^3.0",
-    "happyr/doctrine-specification": "^0.7.2",
-    "sensio/framework-extra-bundle": "^3.0",
-    "myclabs/php-enum": "^1.5",
-    "doctrine/orm": "^2.5",
     "doctrine/doctrine-bundle": "^1.6",
-    "jms/serializer-bundle": "^1.1"
+    "doctrine/orm": "^2.5",
+    "happyr/doctrine-specification": "^0.7.2",
+    "jms/serializer-bundle": " 2.3.1",
+    "myclabs/php-enum": "^1.5",
+    "sensio/framework-extra-bundle": "^3.0",
+    "symfony/symfony": "^2.8|^3.0|^4.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7",
