--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "jms/serializer-bundle": " 2.3.1",
     "myclabs/php-enum": "^1.5",
     "sensio/framework-extra-bundle": "^3.0",
-    "symfony/symfony": "^2.8|^3.0|^4.0"
+    "symfony/symfony": "^3.4|^4.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7",
